--- a/src/app/modules/Footer/Footer.Style.scss
+++ b/src/app/modules/Footer/Footer.Style.scss
@@ -24,7 +24,7 @@
     padding: 0;
     width: 15%;
     max-height: 50px;
-    min-width: 100px;
+    min-width: 70px;
     margin-top: 10px;
     margin-right: 10px;
     font-weight: 200;
